--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "firebase": "^7.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -14,6 +15,7 @@
     "react-scripts": "3.4.3",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.0"
   },
